Fixed menu overlap on mobile screen

--- a/styles.css
+++ b/styles.css
@@ -212,15 +212,18 @@ body {
     }
     .header > img {
         margin-top: 30px;
+        width: fit-content;
+        align-self: center;
     }
     .menu {
-        margin-top: 30px;
+      margin-top: 30px;
       flex-wrap: wrap;
       justify-content: center;
+      width: auto;
     }
     
     .menu > a {
-      flex-basis: 50%;
+      flex-basis: 30%;
     }
     
     .contentsection,
